--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -153,10 +153,13 @@ jobs:
           name: wheels-sdist
           path: dist
 
+  debugrelease:
+    run: echo "ref: ${{ github.ref }}"
+
   release:
     name: Release
     runs-on: ubuntu-latest
-    if: "startsWith(github.ref, 'refs/tags/')"
+    if: startsWith(github.ref, 'refs/tags/')
     needs: [linux, musllinux, windows, macos, sdist]
     steps:
       - uses: actions/download-artifact@v4
