--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -154,7 +154,10 @@ jobs:
           path: dist
 
   debugrelease:
-    run: echo "ref: ${{ github.ref }}"
+    runs-on: ubuntu-latest
+    steps:
+      - name: Debug github.ref
+        run: echo "ref: ${{ github.ref }}"
 
   release:
     name: Release
